--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,6 +2,7 @@ pipeline {
     agent {
         docker {
             image 'maven:3-alpine'
+            label 'awx'
             args '-v /home/ansible/.m2:/root/.m2'
         }
     }
