--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,5 +1,8 @@
 pipeline {
     agent any
+    tools {
+        maven 'slavemaven' 
+    }    
     stages {
         stage('Build') {
             steps {
