--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,12 +1,10 @@
 pipeline {
     agent any
+    tools {
+        maven 'slavemaven' 
+		jdk 'slavejdk'        
+    }    
     stages {
-    stage('Initialize'){
-        def dockerHome = tool 'myDocker'
-        def mavenHome  = tool 'myMaven'
-        env.PATH = "${dockerHome}/bin:${mavenHome}/bin:${env.PATH}"
-    }
-
         stage('Build') {
             steps {
                 sh 'mvn -B -DskipTests clean package'
