--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,8 +1,8 @@
 pipeline {
     agent any
     tools {
-        maven 'slavemaven' 
-		jdk 'slavejdk'        
+        maven 'myMaven' 
+	jdk 'myJDK'        
     }    
     stages {
         stage('Build') {
