--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     tools {
         maven 'myMaven' 
 	jdk 'myJDK'     
-	git 'myGit'
+	/*git 'myGit'*/
     }    
     stages {
         stage('Build') {
